# ego-planner-for-ground-robot

./: README.md  中文说明.md
autonomous_exploration_development_environment/: .gitignore
autonomous_exploration_development_environment/src/local_planner/launch/: local_planner.launch
autonomous_exploration_development_environment/src/sensor_scan_generation/: CMakeLists.txt  package.xml
autonomous_exploration_development_environment/src/sensor_scan_generation/launch/: sensor_scan_generation.launch
autonomous_exploration_development_environment/src/sensor_scan_generation/src/: sensorScanGeneration.cpp
autonomous_exploration_development_environment/src/terrain_analysis/launch/: terrain_analysis.launch
autonomous_exploration_development_environment/src/terrain_analysis/src/: terrainAnalysis.cpp
autonomous_exploration_development_environment/src/terrain_analysis_ext/: CMakeLists.txt  package.xml
autonomous_exploration_development_environment/src/terrain_analysis_ext/launch/: terrain_analysis_ext.launch
autonomous_exploration_development_environment/src/terrain_analysis_ext/src/: terrainAnalysisExt.cpp
autonomous_exploration_development_environment/src/vehicle_simulator/: CMakeLists.txt  package.xml
autonomous_exploration_development_environment/src/vehicle_simulator/launch/: system_campus.launch  system_forest.launch  system_garage.launch  system_indoor.launch  system_real_robot.launch  system_tunnel.launch  vehicle_simulator.launch
autonomous_exploration_development_environment/src/vehicle_simulator/log/: readme.txt
autonomous_exploration_development_environment/src/vehicle_simulator/mesh/: download_environments.sh
autonomous_exploration_development_environment/src/vehicle_simulator/rviz/: vehicle_simulator.rviz
autonomous_exploration_development_environment/src/vehicle_simulator/src/: vehicleSimulator.cpp
autonomous_exploration_development_environment/src/vehicle_simulator/urdf/: robot.urdf.xacro
autonomous_exploration_development_environment/src/visualization_tools/: CMakeLists.txt  package.xml
autonomous_exploration_development_environment/src/visualization_tools/launch/: visualization_tools.launch
autonomous_exploration_development_environment/src/visualization_tools/scripts/: realTimePlot.py
autonomous_exploration_development_environment/src/visualization_tools/src/: visualizationTools.cpp
autonomous_exploration_development_environment/src/waypoint_example/data/: boundary_garage.ply  waypoints_garage.ply
autonomous_exploration_development_environment/src/waypoint_example/launch/: waypoint_example_garage.launch
ego-planner/patchwork/launch/: offline_ouster128.launch  rosbag_kitti.launch
ego-planner/patchwork/nodes/: offline_own_data.cpp
ego-planner/planner/mpc_controller/: CMakeLists.txt  package.xml
ego-planner/planner/mpc_controller/app/: mpc_control_test.cpp  qp_test.cpp
ego-planner/planner/mpc_controller/include/: MPC.hpp
ego-planner/planner/mpc_controller/src/: MPC.cpp
ego-planner/planner/path_searching/src/: dyn_a_star.cpp
ego-planner/planner/plan_manage/: package.xml
ego-planner/planner/plan_manage/launch/: advanced_param.xml  default.rviz
ego-planner/planner/plan_manage/src/: ego_replan_fsm.cpp  planner_manager.cpp  traj_server.cpp
ego-planner/qpOASES/src/: QProblem.cpp
gazebo_sim/: CMakeLists.txt  package.xml
gazebo_sim/launch/: gazebo_sim.launch
joy_control/: CMakeLists.txt  package.xml
joy_control/src/: joy_control.cpp
patchwork/config/: params.yaml  params_ouster128.yaml
patchwork/nodes/: ros_kitti.cpp
patchwork/rviz/: patchwork_own_data.rviz
planner/bspline_opt/include/bspline_opt/: bspline_optimizer.h
planner/bspline_opt/src/: bspline_optimizer.cpp
planner/mpc_controller/: CMakeLists.txt
planner/mpc_controller/app/: example.cpp
planner/mpc_controller/include/: MPC.hpp
planner/mpc_controller/src/: uniform_bspline.cpp
planner/plan_env/src/: grid_map.cpp
planner/plan_manage/: CMakeLists.txt
planner/plan_manage/include/plan_manage/: ego_replan_fsm.h  planner_manager.h
planner/plan_manage/launch/: advanced_param.xml  default.rviz  run_in_sim.launch
planner/plan_manage/src/: ego_planner_node.cpp  ego_replan_fsm.cpp
planner/traj_utils/src/: planning_visualization.cpp
robot_gazebo-main/fdilink_ahrs/fdilink_ahrs/: CMakeLists.txt  package.xml  wheeltec_udev.sh
robot_gazebo-main/fdilink_ahrs/fdilink_ahrs/include/: ahrs_driver.h  crc_table.h  fdilink_data_struct.h
robot_gazebo-main/fdilink_ahrs/fdilink_ahrs/launch/: ahrs_data.launch  tf.launch
robot_gazebo-main/fdilink_ahrs/fdilink_ahrs/src/: ahrs_driver.cpp  crc_table.cpp  imu_tf.cpp
robot_gazebo-main/pcd2pgm/: CMakeLists.txt  package.xml
robot_gazebo-main/pcd2pgm/launch/: run.launch
robot_gazebo-main/pcd2pgm/src/: pcd2pgm.cpp
robot_gazebo-main/realsense_ros_gazebo/: package.xml
robot_gazebo-main/realsense_ros_gazebo/launch/: simulation.launch
robot_gazebo-main/scout_gazebo/: CMakeLists.txt  package.xml
robot_gazebo-main/scout_gazebo/config/: show_car.rviz  show_robot.rviz
robot_gazebo-main/scout_gazebo/launch/: scout_gazebo.launch  show_sensor.launch
robot_gazebo-main/scout_gazebo/urdf/: base.xacro  camera.xacro  imu.xacro  inertial.xacro  laser_support.xacro  move.xacro  scout_wheel_type1.xacro  scout_wheel_type2.xacro  sensor_camera.xacro
robot_gazebo-main/scout_gazebo/world/: forest10.world  forest11.world  forest12.world
robot_gazebo-main/scout_gazebo/worlds/: lab.world  office.world
robot_gazebo-main/scout_slam_nav/: CMakeLists.txt  package.xml
robot_gazebo-main/scout_slam_nav/config/: nav.rviz
robot_gazebo-main/scout_slam_nav/launch/: amcl.launch  gmapping_demo.launch  move_base.launch  nav.launch  read_map.launch  scout_gmapping.launch
robot_gazebo-main/scout_slam_nav/map/: globalmap.yaml  nav.pgm  nav.yaml  smallcity.yaml
robot_gazebo-main/scout_slam_nav/param/: base_global_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  dwa_param.yaml  teb_local_planner_params.yaml
robot_gazebo-main/velodyne_simulator/: bitbucket-pipelines.yml
(+6 files in other folders)
