<?xml version="1.0"?>
<package format="2">

  <name>realsense_ros_gazebo</name>
  <version>1.2.0</version>

  <description>Intel Realsense Camera Simulations</description>

  <author email="sergey.dorodnicov@intel.com">Sergey Dorodnicov</author>
  <author email="doron.hirshberg@intel.com">Doron Hirshberg</author>
  <author email="marton@neorobot.hu">Marton Juhasz</author>

  <license>Apache 2.0</license>

  <maintainer email="marton@neorobot.hu">nilseuropa</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_dev</build_depend>
  <build_depend>message_generation</build_depend>

  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>urdf</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>rosconsole</depend>
  <depend>diagnostic_updater</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>

  <exec_depend>gazebo</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
