<package>
  <name>sensor_scan_generation</name>
  <version>0.0.1</version>
  <description>sensor_scan_generation is a package to generate scan data in sensor frame with registered_scan in map frame.</description>
  <maintainer email="hongbiaz@cmu.edu">Hongbiao Zhu</maintainer>
  <license>BSD</license>

  <author>Hongbiao Zhu</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
</package>
